feat: :sparkles: Backend cleaning part 2